--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -61,7 +61,7 @@
     
       <footer>
         <p>&copy; {{ site.author.name }}
-          from 2014 <a href="{{site.url}}/zcontact.html" title="Bin Liu">Bin Liu</a>
+          2014 from <a href="{{site.url}}/zcontact.html" title="Bin Liu">Bin Liu</a> powered by <a href="http://jekyllbootstrap.com//" title="jekyll-bootstrap">Jekyll-bootstrap</a>
         </p>
       </footer>
 
