--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -40,11 +40,17 @@
   </div>
   
   <div class="span4">
-    <h4>Published</h4>
+    <h4>发布时间</h4>
     <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
-
+    </br>
+    <h4>类别目录</h4>
+    <ul class="tag_box">
+    {% assign categories_list = page.categories %}
+    {% include JB/categories_list %}
+    </ul>
+    <br/>
   {% unless page.tags == empty %}
-    <h4>Tags</h4>
+    <h4>标签</h4>
     <ul class="tag_box">
     {% assign tags_list = page.tags %}
     {% include JB/tags_list %}
