--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -3,6 +3,7 @@
 </div>
 
 <div class="pagination">
+<ul>
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 往前</a></li>
       {% else %}
@@ -14,12 +15,12 @@
       {% else %}
         <li class="next disabled"><a>往后 &rarr;</a>
       {% endif %}
+      </ul>
     </div>
     
 <div class="row">
   <div class="span10">
     {{ content }}
-    <hr>
     <div class="pagination">
       <ul>
       {% if page.previous %}
@@ -35,7 +36,6 @@
       {% endif %}
       </ul>
     </div>
-    <hr>
     {% include JB/comments %}
   </div>
   
@@ -43,18 +43,25 @@
     <h4>发布时间</h4>
     <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
     </br>
+
     <h4>类别目录</h4>
     <ul class="tag_box">
     {% assign categories_list = page.categories %}
     {% include JB/categories_list %}
     </ul>
     <br/>
+    
   {% unless page.tags == empty %}
     <h4>标签</h4>
     <ul class="tag_box">
     {% assign tags_list = page.tags %}
     {% include JB/tags_list %}
     </ul>
-  {% endunless %}  
+  {% endunless %}
+  </br>
+  
+  <h4>扫描二维码加我哦^_^</h4>
+    <img src="/images/weixin.png" height=200px width=200px/>
+    
   </div>
 </div>
