--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,7 +34,11 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+
           </ul>
+        <form class="navbar-search pull-left" id="search-form" align="right">
+  <input type="text" id="google-search" class="search-query" placeholder="Search">
+        </form>
         </div>
       </div>
     </div>
