--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>化零为整</small></h1>
+  <h1>{{ page.title }} <small>stay foolish, stay hungry</small></h1>
 </div>
 
 <div class="pagination">
